--- a/index.html
+++ b/index.html
@@ -1,192 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap" rel="stylesheet">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Memento</title>
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=wxiL3p2bdPSgp_5iz3qKKgyglxlV-lSPRi-JimJXJampb0EIjr4Uf0ZqqOfndGH4QX5VamSRQLJ0Qs0oopKhvj0Lpix1G8hUIXYhK-FjpPSyzly4Jyy3nmrQD2frxgidFJpoiKsFzq9jGx-TLVSZMQnUQIoEldLj8O30rIUTLF87pFcdcLDvCLssifbwin7Q" charset="UTF-8"></script><style type="text/css">
-        html {
-        font-family: 'Pretendard-Regular';
-        src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-        font-weight: 400;
-        font-style: normal;
-        }
-        header{margin: auto; margin: 20px 0 200px 0; display: flex; 
-        justify-content: space-between; background: black;
-        align-items: center;}
-        body,h1,h2,h3,p,footer{margin: 0;padding: 0; word-break: keep-all;}
-        h3{padding-top: 200px;}
-        section{background: white;}
-        p{padding-top: 20px; font-weight: 300; line-height: 30px; font-size: 1.1rem;}
-        .wrap{width: 1600px; margin: auto;}
-        .menu{margin: 0px; padding: 0px; display: flex; justify-content: space-between;}
-        .menu li{list-style: none;text-align: center;}
-        .menu li a{padding: 10px 10px;display: block; background: black;
-                font-family: 'Pretendard-Regular';
-                src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-                font-weight: 400;
-                font-style: normal;
-                font-size: 1.2rem;
-                text-decoration: none;
-                color: white;}
-        .floating-image{position: fixed; right: 20px;
-                top: 50%; animation: floatingAnimation 3s ease-in-out infinite alternate;}
-        @keyframes floatingAnimation {
-        from {transform: translateY(-20px);}to {transform: translateY(20px);}}
-        .bgbl{background: black;}
-        .upspc{padding-top: 200px;}
-        .downspc{padding-bottom: 200px;}
-        .white{font-color: white;}
-        .stick{position: absolute;}
-        .fixed{background-image: url('뉴런.gif');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-            background-attachment: fixed;}
-        .flex{display: flex;position: relative;}
-        .section-with-bg {
-        background-image: url('청소기.jpg');
-        background-size: cover;
-        position: relative;}
-        .section-with-bg::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(to right, rgba(255,255,255,0), rgba(255,255,255,1));
-        z-index: 1;
-    }
-    </style>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title></title>
 </head>
 <body>
-    <header class="bgbl">
-        <div class="wrap">
-            <h1 style="color: white;">Memento</h1>
-        </div>
-            <nav>
-        <ul class="wrap menu">
-             <li><a href="#1">Memento</a></li>
-             <li><a href="#2">Details</a></li>
-             <li><a href="#3">Review</a></li>
-             <li><a href="#4">Precautions for use</a></li>
-        </ul>
-    </nav>
-    </header>
-    <section class="wrap section-with-bg" id="1" style="padding-bottom: 900px;">
-        <div>
-            <h2 style="font-size: 60px; font-weight:900;">Memento</h2>
-            <p style="font-weight: 200; font-size:20px;">당신의 기억을 지우는 가장 완벽한 방법.</p>
-        </div>
-    </section>
- <hr style="border: solid 3px black; margin-top: 400px;">
-    <section class="wrap upspc downspc">
-        <div style="clear: both;">
-             <img src="brain.png" style="float: right; margin: 1100px 100px 0px 20px; width: 600px; height: auto;" class="floating-image stick">
-             <p style="float: left;">사랑하는 연인과 헤어졌을 때,<br>누군가가 우리 곁을 떠났을 때.<br><br>감정은 시간이 지나며 무뎌지지만, 가장 곤란한 건 물건이죠. <br><br>그 사람이 두고 간 물건.<br>버리자니 아깝고, 두자니 계속해서 과거의 기억이 떠올라 괴로우신가요? <br><br>Memento가 해결해드립니다.</p>
-        </div>
-    </section>
-    <section>
-        <div class="wrap upspc">
-            <h3 style="font-size: 70px; margin-left: 200px;">99%</h3>
-        </div>
-    </section>
-    <section style="text-align: right;">
-        <div class="wrap downspc">
-            <p>Memento를 사용했을 때 5일 안에 지워지는 원본 기억의 비율입니다.<br>100년을 알고 지낸 기억이라도, 5일 안에 말끔히 정리할 수 있습니다.</p>
-        </div>
-    </section>
-    <section class="upspc fixed downspc">
-        <div></div>
-    </section>
-    <section id="2">
-        <div class="wrap upspc downspc">
-            <h2 style="font-size: 50px;">Details</h2>
-        </div>
-    </section>
-    <section>
-        <div class="wrap downspc">
-            <h2 style="text-align:center;">제품 구성</h2>
-        </div>
-    </section>
-    <section>
-        <div class="wrap flex">
-            <img src="청소기 흡입구.png" width="200">
-            <h2>흡입구</h2>
-            <p>흡입구에서 물건의 냄새 분자와 표면의 DNA를 분석하고 선별하여 빨아들입니다. 이렇게 흡입한 요소들은 처리부에서 기억 왜곡 분말을 합성하는 데 사용됩니다.</p>
-        </div>
-    </section>
-    <section>
-        <div class="wrap flex">
-            <img src="청소기 합성구.png" width="200">
-            <h2>기억 처리부</h2>
-            <p>흡입구에서 전송된 정보들을 변환하여 기억을 왜곡할 수 있는 분말과 합성합니다. 본 기기의 핵심 부분이므로, 설명서를 잘 읽고 조립하여 주세요.</p>
-        </div>
-    </section>
-    <section>
-        <div class="wrap flex">
-            <img src="청소기 분출구.png" width="200">
-            <h2>분출구</h2>
-            <p>최종적으로 제작된 분말이 분출구를 통해 사용자가 자연스럽게 흡입할 수 있는 속도로 나옵니다. 반경 약 5m까지 분말을 퍼뜨리므로, 기억 왜곡을 원치 않는 사람이 있다면 멀리 떨어져 사용해주세요.</p>
-        </div>
-    </section>
-    <section>
-        <div class="wrap upspc">
-            <h2 style="text-align: center;">작동 원리</h2>
-        </div>
-    </section>
-    <section>
-        <div class="wrap flex">
-            <h2>1</h2>
-            <p>흡입구를 물건에 대고 기기를 작동시키면, Memento가 DNA와 고유 분자를 따로 걸러내 흡입합니다.</p>
-        </div>
-    </section>
-    <section>
-        <div class="wrap">
-            <h2>2</h2>
-            <p>흡입된 DNA 정보와 분자를 기억 처리부로 전송해 기억 왜곡 분말과 합성 작업을 거칩니다. 정밀한 칩이 해당 기억을 적절히 수정할 수 있도록 중추 신경계에 작용할 화학물질을 제작합니다.</p>
-        </div>
-    </section>
-    <section>
-        <div class="wrap">
-            <h2>3</h2>
-            <p>이윽고 분말 제작이 완료되면 분출구를 통해 5m가량 퍼지게 됩니다. 이때 자연스럽게 호흡하는 과정에서 해당 분말이 폐를 거쳐 산소를 타고 뇌로 전송되어 직접적으로 작용할 수 있게 됩니다.</p>
-        </div>
-    </section>
-    <section>
-        <div class="wrap">
-            <h2>프로모션 세일가</h2>
-            <p>청소기(소)+분말 2회분<br>229,000</p>
-        </div>
-    </section>
-    <section>
-        <div class="wrap">
-            <h2>분말 옵션</h2>
-            <p>빨간 분말<br>대상을 마트에서 끼워준 사은품으로 기억하게 됩니다.</p>
-        </div>
-        <div class="wrap">
-            <p>파란 분말<br>대상을 길에서 우연히 줍게 된 것으로 기억하게 됩니다.</p>
-        </div>
-    </section>
-    <section>
-        <div class="wrap">
-            <h2>Review</h2>
-            <p>연인을 사귈 때마다 3개월을 채 못 채우고 헤어지는데, 메멘토 덕분에 받은 선물을 버릴 일이 없어요.<br>-고객 A <br>집에 귀신이 나온다는 소문이 있기는 하지만 메멘토로 구석구석 청소해둬서 집에 들어갈 때마다 아무렇지 않아요.<br>-고객 B<br>무당 일을 하면서 받은 불길한 물건들을 굳이 태우지 않고 쓸 수 있게 돼서 좋아요.<br>-고객 C</p>
-        </div>
-    </section>
-    <section>
-        <div class="wrap">
-            <h2>Precautions for use</h2>
-            <p>절대로 사람에게 사용하지 마세요.<br>물건 표면에 이물질이 많을 경우 기기 성능이 저하될 수 있습니다.<br>일반 청소기 용도로 사용하지 마세요.<br>본 기기의 오남용 시 발생하는 모든 일에 대해 본사는 책임을 지지 않습니다.
-        </div>
-    </section>
+
 </body>
-<footer>
-    
-</footer>
-
-
+</html>
